; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_amd_iommu.c_amd_iommu_enable_device_erratum.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_amd_iommu.c_amd_iommu_enable_device_erratum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.iommu_dev_data = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @amd_iommu_enable_device_erratum(%struct.pci_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.iommu_dev_data*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @amd_iommu_v2_supported()
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %19

9:                                                ; preds = %2
  %10 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %11 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %10, i32 0, i32 0
  %12 = call %struct.iommu_dev_data* @get_dev_data(i32* %11)
  store %struct.iommu_dev_data* %12, %struct.iommu_dev_data** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = shl i32 1, %13
  %15 = load %struct.iommu_dev_data*, %struct.iommu_dev_data** %5, align 8
  %16 = getelementptr inbounds %struct.iommu_dev_data, %struct.iommu_dev_data* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 4
  br label %19

19:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @amd_iommu_v2_supported(...) #1

declare dso_local %struct.iommu_dev_data* @get_dev_data(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
